<resources>
    <string name="app_name">TaskTracker</string>
    <string name="list">List</string>
    <string name="done">Done</string>
    <string name="newTask">New</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject">Subject</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="Done">Done</string>
    <string name="All">All</string>
    <string name="doneList">List by done</string>
    <string name="Pending">Pending</string>
    <string name="deleteList">Delete all</string>
    <string name="Search_by_subject">Search by subject</string>
    <string name="days_7_left">7 days left</string>
    <string name="days_3_left">3 days left</string>
    <string name="days_2_left">2 days left</string>
    <string name="days_1_left">1 days left</string>
    <string name="mobweb">mobweb</string>
    <string name="homwork">homework</string>
    <string name="info">Task manager</string>
    <string name="daysleft">3</string>
    <string name="dialogDays">Give a number in days\nto list all tasks within that interval</string>
    <string name="dialogSubject">Give a subject to search</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="byDeadline">Search by deadline</string>
    <string name="taskTracker">Task Tracker</string>
    <string name="addNewItem">Add new item</string>
    <string name="newItemInfo">You must add a subject, title and deadline\n\nDescription is optional\n\nAfter submit you can undo it</string>
</resources>