<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/iDone"
        android:title="@string/doneList"
        android:icon="@drawable/ic_list_icon"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/list_all_done"
                android:title="@string/All"
                android:icon="@drawable/ic_list_icon"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/list_done"
                android:title="@string/Done"
                android:icon="@drawable/ic_list_icon"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/list_pending"
                android:title="@string/Pending"
                android:icon="@drawable/ic_list_icon"
                app:showAsAction="ifRoom" />
        </menu>

    </item>
    <item
        android:id="@+id/byDeadline"
        android:title="@string/byDeadline"
        android:icon="@drawable/ic_list_icon"
        app:showAsAction="withText">
        <menu>

            <item
            android:id="@+id/days7Left"
            android:title="@string/days_7_left"
            android:icon="@drawable/ic_list_icon"
            app:showAsAction="withText" />

            <item
                android:id="@+id/days3Left"
                android:title="@string/days_3_left"
                android:icon="@drawable/ic_list_icon"
                app:showAsAction="withText" />

            <item
                android:id="@+id/days2Left"
                android:title="@string/days_2_left"
                android:icon="@drawable/ic_list_icon"
                app:showAsAction="withText" />

            <item
                android:id="@+id/days1Left"
                android:title="@string/days_1_left"
                android:icon="@drawable/ic_list_icon"
                app:showAsAction="withText" />

        </menu>
    </item>

    <item
        android:id="@+id/deleteAll"
        android:title="@string/deleteList"
        android:icon="@drawable/ic_list_icon"
        app:showAsAction="withText" />
</menu>
