<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3.6">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taskTracker"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:background="@color/lightGray"
        android:gravity="center"
        android:layout_weight="0.8"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewItem"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/lightGray"
        android:gravity="center"
        android:layout_weight="0.5"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobweb"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:hint="@string/homwork"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/homwork"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/info"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/deadline"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:layout_gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center" />

</LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newItemInfo"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/lightGray"
        android:gravity="center_horizontal"
        android:layout_weight="0.3"/>


</LinearLayout>