<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:id="@+id/task_row"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/task_row_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/task_type_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_viklogo" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/done"
                android:textSize="15sp"
                autofit:minTextSize="8sp" />

            <CheckBox
                android:id="@+id/cbDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:singleLine="true"
                android:text="@string/delete"
                android:textSize="15sp"
                autofit:minTextSize="8sp" />
            <Button
                android:id="@+id/btnExport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:singleLine="true"
                android:text="@string/export"
                android:textSize="15sp"
                autofit:minTextSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tvSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:singleLine="true"
                    autofit:minTextSize="8sp"
                    tools:text="Subject"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"/>

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:singleLine="true"
                    autofit:minTextSize="8sp"
                    tools:text="Title"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"/>


            </LinearLayout>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/tvDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="center"
                android:singleLine="true"
                autofit:minTextSize="8sp"
                tools:text="Date"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:gravity="center"
                android:singleLine="true"
                autofit:minTextSize="8sp"
                android:maxLines="10"
                tools:text="Description"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>